--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,15 @@
 {
   "compilerOptions": {
-    "target": "es2020",
-    "module": "commonjs",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "resolveJsonModule": true
+     "baseUrl": ".",
+     "paths": {
+       "github:*": ["path/to/your/local/copy/*"]
+     },
+     "target": "es2020",
+     "module": "commonjs",
+     "esModuleInterop": true,
+     "forceConsistentCasingInFileNames": true,
+     "strict": true,
+     "skipLibCheck": true,
+     "resolveJsonModule": true
   }
-}
+ }
